@@ -19,3 +19,5 @@
 					Made 2 plots of monthlyAverage temperature
 					Added a function that calculates the delta of two datasets and returns it a year_month map.
 					Made a plot for the delta of temperature between Lund and Lulea
+					Added a function that finds the average temperature for a month 
+					Used the new function to make the final plot for the sub project.
